--- a/steles.css
+++ b/steles.css
@@ -4,8 +4,67 @@ body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     margin: 0;
     padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  #cartelPerder{
+    position: absolute;
+    flex-direction: column;
+    height: 70%;
+    width: 70%;
+    margin-top: -200px;
+    align-items: center;
+    justify-content: center;
+    background-color: #ff6600;
+    border-radius: 40px;
+    
+  }
+  #cartelPerder h1{
+    text-align: center;
+    font-size: 80px;
+    
   }
   
+  #carita-triste{
+    font-size: 80px;
+    text-align: center;
+    display: block;
+  }
+  #cartelGanar{
+    position: absolute;
+    flex-direction: column;
+    height: 70%;
+    width: 70%;
+    margin-top: -200px;
+    align-items: center;
+    justify-content: center;
+    background-color: #ff6600;
+    border-radius: 40px;
+    
+  }
+  #cartelGanar h1{
+    text-align: center;
+    font-size: 80px;
+    
+  }
+  
+  #trofeo{
+    font-size: 200px;
+    text-align: center;
+    display: block;
+  }
+  
+  .ocultar{
+    display: none;
+  }
+
+  #mensaje-record, #puntuacion {
+    text-align: center;
+    font-size: 60px;
+  }
+
   .game-container {
     display: flex;
     align-items: center;
